Begin OaiPmhStatus Bean
